--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <style>
         body{
             
-             background-color:(0, 255, 30);
+             background-color:rgb(209, 0, 232);
         }
             
         p{
