Update About BBC microbit.html

--- a/About BBC microbit.html
+++ b/About BBC microbit.html
@@ -48,6 +48,6 @@ Here is the link of the page where you can download microbit code editor.<a targ
 <a target="blank_" href="https://www.amazon.in/s?k=microbit+cover&crid=1VJHRE4LWATE2&sprefix=Microbit+co%2Caps%2C359&ref=nb_sb_ss_ts-doa-p_1_11">link to buy cover for BBC microbit</a>
 <a target="blank_" href="https://www.amazon.in/BBC-Micro-Silicone-Cover-Protective/dp/B083VHR6XW/ref=sr_1_1?dchild=1&keywords=Cover+for+microbit+v2&qid=1629199508&sr=8-1">link to buy cover for BBC microbit V2</a>
 <h2>A PDF DOCUMENT</h2>
-<a target="blank_ href="https://d.docs.live.net/649b8f102ab5abbe/ABOUT%20THE%20BBC%20MICROBIT.pptx">PDF</a>
+<a target="blank_ href="MICROBIT.ppt">PDF</a>
 </body>
 </html>
