--- a/favorite.html
+++ b/favorite.html
@@ -16,6 +16,7 @@
         </style>
     </head>
     <body>
+	    <img src="SIGN.png"width="260"height="260">
        
         <h1 id="green">____'s Recipe Book</h1>
         
