--- a/favorite.html
+++ b/favorite.html
@@ -16,7 +16,7 @@
         </style>
     </head>
     <body>
-       
+       <img src="SIGN.png"
         <h1 id="green">____'s Recipe Book</h1>
         
         <h2>Contents:</h2>
