--- a/buy.html
+++ b/buy.html
@@ -17,6 +17,7 @@
 
 </head>
 <body>
+        <img src="SIGN.png"width="250"height="250">
 <p>If you are looking for a 5 bhk house on rent you have come to the right place here I will tell you about my 4 bedroom house that is on rent in noida.Location:noida-sector 47.<br>
 Now let me give you an tour of my house:
 <h1>The living room</h1> <br>
