Update About the BBC microbit part 2.html

--- a/About the BBC microbit part 2.html
+++ b/About the BBC microbit part 2.html
@@ -27,7 +27,7 @@
         After you are done with that connect the microbit to your pc and <a target="_blank" href="https://microbit.org/get-started/user-guide/web-usb/">click on this link for the tutoriul</a><br>
         or <a target="_blank" href=https://www.youtube.com/watch?v=-FZ8yTnoozY"">This one</a>
         After you are reading all of the things you can start making your new project.Make sure you see my next website to learn more about the microbit</p>
-/p      </body>
+     </body>
         </html>
         
         
