changed python start

--- a/Happy birthaday.html
+++ b/Happy birthaday.html
@@ -13,19 +13,17 @@
             
             color:rgb(85, 255, 0);
         }    
-		#USERNAME{
 		
-		}
         </style>
         </head>
 		<body>
- <%name=input("What is your name?:")
+ {% name=input("What is your name?:")
 name1=name
 string="Happy Birthday to you Happy birthday to you Happy birthday to dear {} Happy birthday to you.May godbless you may god bles you happy birthday to you  Happy birthday to dear {} happy birthaday to you"
 
 output=string.format(name,name1)
 #Print output to screen
-print(output)%>
+print(output)%}
   
 </form> 
 		</body>
